new TextView and colors

--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Witaj Androidzie</string>
     <string name="hello_world">Witaj świecie!</string>
     <string name="hello_world_land">Witaj poziomy świecie!</string>
+    <string name="another_string">To tylko inny przykładowy tekst.</string>
 </resources>
